[gd_scene load_steps=7 format=3 uid="uid://bfe8t7nt5dxa6"]

[ext_resource type="Script" path="res://scripts/start screen.gd" id="1_3dtxe"]
[ext_resource type="Texture2D" uid="uid://d2o3g4l552mhp" path="res://menu sprites/Стартовый уровень.png" id="1_fksp2"]
[ext_resource type="FontFile" uid="uid://c302n8emoo2ik" path="res://Boogaloo-Regular.ttf" id="3_h0f27"]
[ext_resource type="AudioStream" uid="uid://bwac6c3xbi0s7" path="res://audio/active.mp3" id="5_rt1t8"]
[ext_resource type="AudioStream" uid="uid://cr02eshcr8woa" path="res://audio/hover.mp3" id="6_ami07"]
[ext_resource type="AudioStream" uid="uid://drdt61dueyo2r" path="res://audio/Фон.mp3" id="6_v0n8c"]

[node name="start_screen" type="Node2D"]
script = ExtResource("1_3dtxe")

[node name="СтартовыйУровень" type="Sprite2D" parent="."]
position = Vector2(581.778, 321)
scale = Vector2(0.618519, 0.618519)
texture = ExtResource("1_fksp2")

[node name="Start" type="Button" parent="СтартовыйУровень"]
top_level = true
offset_left = 75.0
offset_top = 555.0
offset_right = 222.0
offset_bottom = 624.0
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.654902, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.423529, 0.423529, 1)
theme_override_colors/font_focus_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.905882, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h0f27")
theme_override_font_sizes/font_size = 50
text = "Start"
flat = true

[node name="Sound on_off" type="Button" parent="СтартовыйУровень"]
top_level = true
offset_left = 194.0
offset_top = 558.0
offset_right = 449.0
offset_bottom = 628.0
theme_override_colors/font_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4, 0.509804, 1)
theme_override_colors/font_hover_color = Color(0.431373, 0.639216, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_disabled_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_fonts/font = ExtResource("3_h0f27")
theme_override_font_sizes/font_size = 50
text = "Sound off"
flat = true

[node name="Exit" type="Button" parent="СтартовыйУровень"]
top_level = true
offset_left = 359.0
offset_top = 558.0
offset_right = 614.0
offset_bottom = 628.0
theme_override_colors/font_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4, 0.509804, 1)
theme_override_colors/font_hover_color = Color(0.431373, 0.639216, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_disabled_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_fonts/font = ExtResource("3_h0f27")
theme_override_font_sizes/font_size = 50
text = "Exit"
flat = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_v0n8c")
autoplay = true

[node name="active" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rt1t8")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ami07")

[connection signal="mouse_entered" from="СтартовыйУровень/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="СтартовыйУровень/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="СтартовыйУровень/Sound on_off" to="." method="_on_sound_on_off_mouse_entered"]
[connection signal="pressed" from="СтартовыйУровень/Sound on_off" to="." method="_on_sound_on_off_pressed"]
[connection signal="mouse_entered" from="СтартовыйУровень/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="СтартовыйУровень/Exit" to="." method="_on_exit_pressed"]
